y.output
Terminals unused in grammar

   tTAB
   tDOLLAR
   tRETURN


Rules useless in parser due to conflicts

   59 $@13: %empty


State 28 conflicts: 1 reduce/reduce
State 49 conflicts: 3 reduce/reduce
State 58 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Main $end

    1 $@1: %empty

    2 Main: DeclFunction tMAIN $@1 tPO tPC Body

    3 $@2: %empty

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody tFINSTR
    5             | %empty

    6 $@3: %empty

    7 Params: $@3 Param NextParam
    8       | %empty

    9 NextParam: tVIRGULE Param
   10          | %empty

   11 Param: vartype tVAR
   12      | tVAR

   13 FuncBody: tACO FuncInstr tACC

   14 FuncInstr: FuncInstrs FuncInstr
   15          | FuncInstrs
   16          | %empty

   17 FuncInstrs: Instructions
   18           | RetVal

   19 RetVal: tSTRING tVAR tFINSTR

   20 Body: tACO Instruction tACC

   21 Instruction: Instructions Instruction
   22            | Instructions
   23            | %empty

   24 Instructions: Calcul
   25             | For
   26             | While
   27             | Print
   28             | Declaration
   29             | If

   30 Declaration: vartype Declarations tFINSTR

   31 Declarations: Multideclaration Declarations
   32             | Lastdeclaration

   33 Multideclaration: tVAR tVIRGULE
   34                 | tVAR tEQUAL tINTNR tVIRGULE

   35 Lastdeclaration: tVAR
   36                | tVAR tEQUAL tINTNR

   37 vartype: tINT
   38        | tCONST

   39 Print: tPRINTF tPO tVAR tPC tFINSTR

   40 $@4: %empty

   41 $@5: %empty

   42 $@6: %empty

   43 If: tIF $@4 tPO Condition tPC $@5 Body $@6 Else

   44 Else: tELSE Body
   45     | %empty

   46 Condition: Expression tCHECKEQ Expression
   47          | Expression tLESS Expression
   48          | Expression tCHECKHIGHER Expression
   49          | Expression tLESSEQUAL Expression
   50          | Expression tMOREEQUAL Expression

   51 $@7: %empty

   52 $@8: %empty

   53 While: tWHILE $@7 tPO Condition tPC $@8 Body

   54 $@9: %empty

   55 $@10: %empty

   56 $@11: %empty

   57 $@12: %empty

   58 For: tFOR tPO $@9 DeclCalc $@10 Condition tFINSTR $@11 tVAR tPLUSPLUS tPC $@12 Body

   59 $@13: %empty

   60 $@14: %empty

   61 $@15: %empty

   62 $@16: %empty

   63 For: tFOR tPO $@13 DeclCalc $@14 Condition tFINSTR $@15 tVAR tMINUSMINUS tPC $@16 Body

   64 DeclCalc: Declaration
   65         | Calcul

   66 Calcul: tVAR tEQUAL Expression tFINSTR
   67       | tVAR tEQUAL tSUBTRACT Expression tFINSTR
   68       | tVAR tPLUSPLUS tFINSTR
   69       | tVAR tMINUSMINUS tFINSTR
   70       | tVAR tMINUSEQUAL Expression tFINSTR
   71       | tVAR tPLUSEQUAL Expression tFINSTR

   72 Expression: Expression tADD Expression
   73           | Expression tSUBTRACT Expression
   74           | Expression tDIVIDE Expression
   75           | Expression tMULTIPLY Expression
   76           | tVAR
   77           | tINTNR
   78           | Function
   79           | tPO tSUBTRACT tINTNR tPC
   80           | tPO Expression tPC

   81 $@17: %empty

   82 Function: tVAR tPO $@17 Params tPC


Terminals, with rules where they appear

$end (0) 0
error (256)
tINT (258) 37
tACO (259) 13 20
tACC (260) 13 20
tCONST (261) 38
tADD (262) 72
tSUBTRACT (263) 67 73 79
tDIVIDE (264) 74
tMULTIPLY (265) 75
tEQUAL (266) 34 36 66 67
tPLUSPLUS (267) 58 68
tMINUSMINUS (268) 63 69
tIF (269) 43
tELSE (270) 44
tCHECKEQ (271) 46
tPO (272) 2 4 39 43 53 58 63 79 80 82
tPC (273) 2 4 39 43 53 58 63 79 80 82
tTAB (274)
tVIRGULE (275) 9 33 34
tDOLLAR (276)
tFINSTR (277) 4 19 30 39 58 63 66 67 68 69 70 71
tINTNR (278) 34 36 77 79
tWHILE (279) 53
tPRINTF (280) 39
tMAIN (281) 2
tVAR (282) 4 11 12 19 33 34 35 36 39 58 63 66 67 68 69 70 71 76 82
tFOR (283) 58 63
tSTRING (284) 19
tCHECKHIGHER (285) 48
tLESS (286) 47
tLESSEQUAL (287) 49
tMOREEQUAL (288) 50
tMINUSEQUAL (289) 70
tPLUSEQUAL (290) 71
tRETURN (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Main (38)
    on left: 2, on right: 0
$@1 (39)
    on left: 1, on right: 2
DeclFunction (40)
    on left: 4 5, on right: 2
$@2 (41)
    on left: 3, on right: 4
Params (42)
    on left: 7 8, on right: 4 82
$@3 (43)
    on left: 6, on right: 7
NextParam (44)
    on left: 9 10, on right: 7
Param (45)
    on left: 11 12, on right: 7 9
FuncBody (46)
    on left: 13, on right: 4
FuncInstr (47)
    on left: 14 15 16, on right: 13 14
FuncInstrs (48)
    on left: 17 18, on right: 14 15
RetVal (49)
    on left: 19, on right: 18
Body (50)
    on left: 20, on right: 2 43 44 53 58 63
Instruction (51)
    on left: 21 22 23, on right: 20 21
Instructions (52)
    on left: 24 25 26 27 28 29, on right: 17 21 22
Declaration (53)
    on left: 30, on right: 28 64
Declarations (54)
    on left: 31 32, on right: 30 31
Multideclaration (55)
    on left: 33 34, on right: 31
Lastdeclaration (56)
    on left: 35 36, on right: 32
vartype (57)
    on left: 37 38, on right: 4 11 30
Print (58)
    on left: 39, on right: 27
If (59)
    on left: 43, on right: 29
$@4 (60)
    on left: 40, on right: 43
$@5 (61)
    on left: 41, on right: 43
$@6 (62)
    on left: 42, on right: 43
Else (63)
    on left: 44 45, on right: 43
Condition (64)
    on left: 46 47 48 49 50, on right: 43 53 58 63
While (65)
    on left: 53, on right: 26
$@7 (66)
    on left: 51, on right: 53
$@8 (67)
    on left: 52, on right: 53
For (68)
    on left: 58 63, on right: 25
$@9 (69)
    on left: 54, on right: 58
$@10 (70)
    on left: 55, on right: 58
$@11 (71)
    on left: 56, on right: 58
$@12 (72)
    on left: 57, on right: 58
$@13 (73)
    on left: 59, on right: 63
$@14 (74)
    on left: 60, on right: 63
$@15 (75)
    on left: 61, on right: 63
$@16 (76)
    on left: 62, on right: 63
DeclCalc (77)
    on left: 64 65, on right: 58 63
Calcul (78)
    on left: 66 67 68 69 70 71, on right: 24 65
Expression (79)
    on left: 72 73 74 75 76 77 78 79 80, on right: 46 47 48 49 50 66
    67 70 71 72 73 74 75 80
Function (80)
    on left: 82, on right: 78
$@17 (81)
    on left: 81, on right: 82


State 0

    0 $accept: . Main $end

    tINT    shift, and go to state 1
    tCONST  shift, and go to state 2

    $default  reduce using rule 5 (DeclFunction)

    Main          go to state 3
    DeclFunction  go to state 4
    vartype       go to state 5


State 1

   37 vartype: tINT .

    $default  reduce using rule 37 (vartype)


State 2

   38 vartype: tCONST .

    $default  reduce using rule 38 (vartype)


State 3

    0 $accept: Main . $end

    $end  shift, and go to state 6


State 4

    2 Main: DeclFunction . tMAIN $@1 tPO tPC Body

    tMAIN  shift, and go to state 7


State 5

    4 DeclFunction: vartype . tVAR $@2 tPO Params tPC FuncBody tFINSTR

    tVAR  shift, and go to state 8


State 6

    0 $accept: Main $end .

    $default  accept


State 7

    2 Main: DeclFunction tMAIN . $@1 tPO tPC Body

    $default  reduce using rule 1 ($@1)

    $@1  go to state 9


State 8

    4 DeclFunction: vartype tVAR . $@2 tPO Params tPC FuncBody tFINSTR

    $default  reduce using rule 3 ($@2)

    $@2  go to state 10


State 9

    2 Main: DeclFunction tMAIN $@1 . tPO tPC Body

    tPO  shift, and go to state 11


State 10

    4 DeclFunction: vartype tVAR $@2 . tPO Params tPC FuncBody tFINSTR

    tPO  shift, and go to state 12


State 11

    2 Main: DeclFunction tMAIN $@1 tPO . tPC Body

    tPC  shift, and go to state 13


State 12

    4 DeclFunction: vartype tVAR $@2 tPO . Params tPC FuncBody tFINSTR

    tPC       reduce using rule 8 (Params)
    $default  reduce using rule 6 ($@3)

    Params  go to state 14
    $@3     go to state 15


State 13

    2 Main: DeclFunction tMAIN $@1 tPO tPC . Body

    tACO  shift, and go to state 16

    Body  go to state 17


State 14

    4 DeclFunction: vartype tVAR $@2 tPO Params . tPC FuncBody tFINSTR

    tPC  shift, and go to state 18


State 15

    7 Params: $@3 . Param NextParam

    tINT    shift, and go to state 1
    tCONST  shift, and go to state 2
    tVAR    shift, and go to state 19

    Param    go to state 20
    vartype  go to state 21


State 16

   20 Body: tACO . Instruction tACC

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 22
    tWHILE   shift, and go to state 23
    tPRINTF  shift, and go to state 24
    tVAR     shift, and go to state 25
    tFOR     shift, and go to state 26

    $default  reduce using rule 23 (Instruction)

    Instruction   go to state 27
    Instructions  go to state 28
    Declaration   go to state 29
    vartype       go to state 30
    Print         go to state 31
    If            go to state 32
    While         go to state 33
    For           go to state 34
    Calcul        go to state 35


State 17

    2 Main: DeclFunction tMAIN $@1 tPO tPC Body .

    $default  reduce using rule 2 (Main)


State 18

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC . FuncBody tFINSTR

    tACO  shift, and go to state 36

    FuncBody  go to state 37


State 19

   12 Param: tVAR .

    $default  reduce using rule 12 (Param)


State 20

    7 Params: $@3 Param . NextParam

    tVIRGULE  shift, and go to state 38

    $default  reduce using rule 10 (NextParam)

    NextParam  go to state 39


State 21

   11 Param: vartype . tVAR

    tVAR  shift, and go to state 40


State 22

   43 If: tIF . $@4 tPO Condition tPC $@5 Body $@6 Else

    $default  reduce using rule 40 ($@4)

    $@4  go to state 41


State 23

   53 While: tWHILE . $@7 tPO Condition tPC $@8 Body

    $default  reduce using rule 51 ($@7)

    $@7  go to state 42


State 24

   39 Print: tPRINTF . tPO tVAR tPC tFINSTR

    tPO  shift, and go to state 43


State 25

   66 Calcul: tVAR . tEQUAL Expression tFINSTR
   67       | tVAR . tEQUAL tSUBTRACT Expression tFINSTR
   68       | tVAR . tPLUSPLUS tFINSTR
   69       | tVAR . tMINUSMINUS tFINSTR
   70       | tVAR . tMINUSEQUAL Expression tFINSTR
   71       | tVAR . tPLUSEQUAL Expression tFINSTR

    tEQUAL       shift, and go to state 44
    tPLUSPLUS    shift, and go to state 45
    tMINUSMINUS  shift, and go to state 46
    tMINUSEQUAL  shift, and go to state 47
    tPLUSEQUAL   shift, and go to state 48


State 26

   58 For: tFOR . tPO $@9 DeclCalc $@10 Condition tFINSTR $@11 tVAR tPLUSPLUS tPC $@12 Body
   63    | tFOR . tPO $@13 DeclCalc $@14 Condition tFINSTR $@15 tVAR tMINUSMINUS tPC $@16 Body

    tPO  shift, and go to state 49


State 27

   20 Body: tACO Instruction . tACC

    tACC  shift, and go to state 50


State 28

   21 Instruction: Instructions . Instruction
   22            | Instructions .

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 22
    tWHILE   shift, and go to state 23
    tPRINTF  shift, and go to state 24
    tVAR     shift, and go to state 25
    tFOR     shift, and go to state 26

    tACC      reduce using rule 22 (Instruction)
    tACC      [reduce using rule 23 (Instruction)]
    $default  reduce using rule 22 (Instruction)

    Instruction   go to state 51
    Instructions  go to state 28
    Declaration   go to state 29
    vartype       go to state 30
    Print         go to state 31
    If            go to state 32
    While         go to state 33
    For           go to state 34
    Calcul        go to state 35


State 29

   28 Instructions: Declaration .

    $default  reduce using rule 28 (Instructions)


State 30

   30 Declaration: vartype . Declarations tFINSTR

    tVAR  shift, and go to state 52

    Declarations      go to state 53
    Multideclaration  go to state 54
    Lastdeclaration   go to state 55


State 31

   27 Instructions: Print .

    $default  reduce using rule 27 (Instructions)


State 32

   29 Instructions: If .

    $default  reduce using rule 29 (Instructions)


State 33

   26 Instructions: While .

    $default  reduce using rule 26 (Instructions)


State 34

   25 Instructions: For .

    $default  reduce using rule 25 (Instructions)


State 35

   24 Instructions: Calcul .

    $default  reduce using rule 24 (Instructions)


State 36

   13 FuncBody: tACO . FuncInstr tACC

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 22
    tWHILE   shift, and go to state 23
    tPRINTF  shift, and go to state 24
    tVAR     shift, and go to state 25
    tFOR     shift, and go to state 26
    tSTRING  shift, and go to state 56

    $default  reduce using rule 16 (FuncInstr)

    FuncInstr     go to state 57
    FuncInstrs    go to state 58
    RetVal        go to state 59
    Instructions  go to state 60
    Declaration   go to state 29
    vartype       go to state 30
    Print         go to state 31
    If            go to state 32
    While         go to state 33
    For           go to state 34
    Calcul        go to state 35


State 37

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody . tFINSTR

    tFINSTR  shift, and go to state 61


State 38

    9 NextParam: tVIRGULE . Param

    tINT    shift, and go to state 1
    tCONST  shift, and go to state 2
    tVAR    shift, and go to state 19

    Param    go to state 62
    vartype  go to state 21


State 39

    7 Params: $@3 Param NextParam .

    $default  reduce using rule 7 (Params)


State 40

   11 Param: vartype tVAR .

    $default  reduce using rule 11 (Param)


State 41

   43 If: tIF $@4 . tPO Condition tPC $@5 Body $@6 Else

    tPO  shift, and go to state 63


State 42

   53 While: tWHILE $@7 . tPO Condition tPC $@8 Body

    tPO  shift, and go to state 64


State 43

   39 Print: tPRINTF tPO . tVAR tPC tFINSTR

    tVAR  shift, and go to state 65


State 44

   66 Calcul: tVAR tEQUAL . Expression tFINSTR
   67       | tVAR tEQUAL . tSUBTRACT Expression tFINSTR

    tSUBTRACT  shift, and go to state 66
    tPO        shift, and go to state 67
    tINTNR     shift, and go to state 68
    tVAR       shift, and go to state 69

    Expression  go to state 70
    Function    go to state 71


State 45

   68 Calcul: tVAR tPLUSPLUS . tFINSTR

    tFINSTR  shift, and go to state 72


State 46

   69 Calcul: tVAR tMINUSMINUS . tFINSTR

    tFINSTR  shift, and go to state 73


State 47

   70 Calcul: tVAR tMINUSEQUAL . Expression tFINSTR

    tPO     shift, and go to state 67
    tINTNR  shift, and go to state 68
    tVAR    shift, and go to state 69

    Expression  go to state 74
    Function    go to state 71


State 48

   71 Calcul: tVAR tPLUSEQUAL . Expression tFINSTR

    tPO     shift, and go to state 67
    tINTNR  shift, and go to state 68
    tVAR    shift, and go to state 69

    Expression  go to state 75
    Function    go to state 71


State 49

   58 For: tFOR tPO . $@9 DeclCalc $@10 Condition tFINSTR $@11 tVAR tPLUSPLUS tPC $@12 Body
   63    | tFOR tPO . $@13 DeclCalc $@14 Condition tFINSTR $@15 tVAR tMINUSMINUS tPC $@16 Body

    tINT      reduce using rule 54 ($@9)
    tINT      [reduce using rule 59 ($@13)]
    tCONST    reduce using rule 54 ($@9)
    tCONST    [reduce using rule 59 ($@13)]
    tVAR      reduce using rule 54 ($@9)
    tVAR      [reduce using rule 59 ($@13)]
    $default  reduce using rule 54 ($@9)

    $@9   go to state 76
    $@13  go to state 77


State 50

   20 Body: tACO Instruction tACC .

    $default  reduce using rule 20 (Body)


State 51

   21 Instruction: Instructions Instruction .

    $default  reduce using rule 21 (Instruction)


State 52

   33 Multideclaration: tVAR . tVIRGULE
   34                 | tVAR . tEQUAL tINTNR tVIRGULE
   35 Lastdeclaration: tVAR .
   36                | tVAR . tEQUAL tINTNR

    tEQUAL    shift, and go to state 78
    tVIRGULE  shift, and go to state 79

    $default  reduce using rule 35 (Lastdeclaration)


State 53

   30 Declaration: vartype Declarations . tFINSTR

    tFINSTR  shift, and go to state 80


State 54

   31 Declarations: Multideclaration . Declarations

    tVAR  shift, and go to state 52

    Declarations      go to state 81
    Multideclaration  go to state 54
    Lastdeclaration   go to state 55


State 55

   32 Declarations: Lastdeclaration .

    $default  reduce using rule 32 (Declarations)


State 56

   19 RetVal: tSTRING . tVAR tFINSTR

    tVAR  shift, and go to state 82


State 57

   13 FuncBody: tACO FuncInstr . tACC

    tACC  shift, and go to state 83


State 58

   14 FuncInstr: FuncInstrs . FuncInstr
   15          | FuncInstrs .

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 22
    tWHILE   shift, and go to state 23
    tPRINTF  shift, and go to state 24
    tVAR     shift, and go to state 25
    tFOR     shift, and go to state 26
    tSTRING  shift, and go to state 56

    tACC      reduce using rule 15 (FuncInstr)
    tACC      [reduce using rule 16 (FuncInstr)]
    $default  reduce using rule 15 (FuncInstr)

    FuncInstr     go to state 84
    FuncInstrs    go to state 58
    RetVal        go to state 59
    Instructions  go to state 60
    Declaration   go to state 29
    vartype       go to state 30
    Print         go to state 31
    If            go to state 32
    While         go to state 33
    For           go to state 34
    Calcul        go to state 35


State 59

   18 FuncInstrs: RetVal .

    $default  reduce using rule 18 (FuncInstrs)


State 60

   17 FuncInstrs: Instructions .

    $default  reduce using rule 17 (FuncInstrs)


State 61

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody tFINSTR .

    $default  reduce using rule 4 (DeclFunction)


State 62

    9 NextParam: tVIRGULE Param .

    $default  reduce using rule 9 (NextParam)


State 63

   43 If: tIF $@4 tPO . Condition tPC $@5 Body $@6 Else

    tPO     shift, and go to state 67
    tINTNR  shift, and go to state 68
    tVAR    shift, and go to state 69

    Condition   go to state 85
    Expression  go to state 86
    Function    go to state 71


State 64

   53 While: tWHILE $@7 tPO . Condition tPC $@8 Body

    tPO     shift, and go to state 67
    tINTNR  shift, and go to state 68
    tVAR    shift, and go to state 69

    Condition   go to state 87
    Expression  go to state 86
    Function    go to state 71


State 65

   39 Print: tPRINTF tPO tVAR . tPC tFINSTR

    tPC  shift, and go to state 88


State 66

   67 Calcul: tVAR tEQUAL tSUBTRACT . Expression tFINSTR
